crates/storage/tests/compile_fail/state_bare_primitive.stderr
error: (calimero)> bare `u64` is not allowed as a mergeable field — it has no merge semantics and would silently diverge across replicas. Wrap it: `LwwRegister<T> for last-write-wins, or Counter for monotonic counters`.

       If you genuinely need a non-CRDT type, skip `#[app::state]` / `#[derive(Mergeable)]` and implement `Mergeable` by hand — but understand that any non-CRDT field will not converge across replicas.
 --> tests/compile_fail/state_bare_primitive.rs:8:12
  |
8 |     count: u64,
  |            ^^^
